# py-ai-api-integration

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  teste.py  validation.ipynb
.github/: copilot-instructions.md
data/: teste.json
sql/: __init__.py  create_api_usages.sql  insert_api_usages.sql
src/common/: __init__.py  logger.py
src/config/: constants.py  constypes.py  settings.yaml
src/core/: __init__.py  base_class.py
src/enums/: __init__.py
src/repositories/: __init__.py  ai_repository.py  database_repository.py  result_converter.py  sqlite_repository.py
temp/: __init__.py
tests/: test_format_result_for_user.py
tools/: commit.txt
